Time: 32 ms (78.79%), Space: 59.3 MB (32.51%) - LeetHub